made header responsive

--- a/index.html
+++ b/index.html
@@ -27,12 +27,50 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/side-bar.css" />
     <link rel="stylesheet" href="css/my-works.css" />
+    <link rel="stylesheet" href="css/media querie/1400p.css" />
+    <link rel="stylesheet" href="css/media querie/1000p.css" />
+    <link rel="stylesheet" href="css/media querie/800p.css" />
+    <link rel="stylesheet" href="css/media querie/600p.css" />
+    <link rel="stylesheet" href="css/media querie/400p.css" />
     <title>Rapdi Dev</title>
   </head>
   <body>
+    <div class="navbar navbar-collapse-sm navbar-dark bg-dark d-flex">
+      <a class="navbar-brand justify-content-end" href="#">Rapid Dev</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#links"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="links">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">My Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Who Am I</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="side-bar">
       <div class="logo">
-        <h1>Rapid Developer</h1>
+        <h1 class="logo-text">Rapid Developer</h1>
+        <h1 class="mobi">Rapid Dev</h1>
       </div>
 
       <div class="menu">
