--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/side-bar.css" />
     <link rel="stylesheet" href="css/my-works.css" />
     <link rel="stylesheet" href="css/media querie/1400p.css" />
+    <link rel="stylesheet" href="css/media querie/1200p.css" />
     <link rel="stylesheet" href="css/media querie/1000p.css" />
     <link rel="stylesheet" href="css/media querie/800p.css" />
     <link rel="stylesheet" href="css/media querie/600p.css" />
@@ -88,26 +89,93 @@
       </div>
     </div>
 
-    <div class="gap"></div>
+    <div class="sec">
+      <div class="gap"></div>
 
-    <div class="main-section">
-      <div class="content">
-        <h1>Hello I'm Yasin <br />I Make The Digital World Better</h1>
-        <p>A UI/UX Designer & Developer</p>
-        <div class="button-group">
-          <a href="#" class="btn btn-outline-danger youtube"
-            >My YouTube Channel</a
-          >
-          <a href="#" class="btn btn-outline-info github">My Github</a>
-          <br />
-          <a href="#" class="btn btn-link cv">Get My CV</a>
+      <div class="main-section">
+        <div class="content">
+          <h1>Hello I'm Yasin <br />I Make The Digital World Better</h1>
+          <p>A UI/UX Designer & Developer</p>
+          <div class="button-group">
+            <a href="#" class="btn btn-outline-danger youtube"
+              >My YouTube Channel</a
+            >
+            <a href="#" class="btn btn-outline-info github">My Github</a>
+            <br />
+            <a href="#" class="btn btn-link cv">Get My CV</a>
+          </div>
+        </div>
+
+        <div class="vid">
+          <video muted autoplay loop>
+            <source src="assets/Orb-Animated-Video.mp4" />
+          </video>
         </div>
       </div>
+    </div>
 
-      <div class="vid">
-        <video muted autoplay loop>
-          <source src="assets/Orb-Animated-Video.mp4" />
-        </video>
+    <div class="sec">
+      <div class="gap"></div>
+      <div class="work-section">
+        <h1>Take A Look At Some Of My Work</h1>
+
+        <div class="card-group pl-4 pr-4 mt-4">
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-group pl-4 pr-4 mt-4">
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="images/img.jpg" alt="" class="card-img" />
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
