--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="css/media querie/800p.css" />
     <link rel="stylesheet" href="css/media querie/600p.css" />
     <link rel="stylesheet" href="css/media querie/400p.css" />
-    <title>Rapdi Dev</title>
+    <title>Rapid Dev</title>
   </head>
   <body>
     <div class="navbar navbar-collapse-sm navbar-dark bg-dark d-flex">
@@ -85,7 +85,7 @@
       </div>
       <div class="mail">
         <p>Email</p>
-        <p class="e">yasinkhan4008@gmail.com</p>
+        <p class="e">yasin@rapiddev.my.id</p>
       </div>
     </div>
 
