--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/side-bar.css" />
     <link rel="stylesheet" href="css/my-works.css" />
+    <link rel="stylesheet" href="css/whoami.css" />
     <link rel="stylesheet" href="css/media querie/1400p.css" />
     <link rel="stylesheet" href="css/media querie/1200p.css" />
     <link rel="stylesheet" href="css/media querie/1000p.css" />
@@ -36,7 +37,10 @@
     <title>Rapid Dev</title>
   </head>
   <body>
-    <div class="navbar navbar-collapse-sm navbar-dark bg-dark d-flex">
+    <div
+      class="navbar navbar-collapse-sm navbar-dark bg-dark d-flex"
+      style="z-index: 1000"
+    >
       <a class="navbar-brand justify-content-end" href="#">Rapid Dev</a>
       <button
         class="navbar-toggler"
@@ -89,7 +93,7 @@
       </div>
     </div>
 
-    <div class="sec">
+    <div class="sec h-100">
       <div class="gap"></div>
 
       <div class="main-section">
@@ -116,8 +120,8 @@
 
     <div class="sec">
       <div class="gap"></div>
-      <div class="work-section">
-        <h1>Take A Look At Some Of My Work</h1>
+      <div class="work-section sec-sec">
+        <h1 class="heading-1">Take A Look At Some Of My Work</h1>
 
         <div class="card-group pl-4 pr-4 mt-4">
           <div class="card">
@@ -177,6 +181,72 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="sec who-bg">
+      <div class="gap"></div>
+      <div class="whoami-sec sec-sec">
+        <h1 class="heading-1 who-text">Who Am I?</h1>
+
+        <div class="slice-group">
+          <div class="slice d-flex">
+            <div class="head">
+              <div class="ava img-1"></div>
+            </div>
+            <div class="text-content">
+              <h3>title</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Blanditiis, nihil!
+              </p>
+            </div>
+          </div>
+
+          <div class="slice right clip-left gra-left d-flex">
+            <div class="text-content text-left-cus">
+              <h3>title</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Blanditiis, nihil!
+              </p>
+            </div>
+            <div class="head right clip-left">
+              <div class="ava right img-2"></div>
+            </div>
+          </div>
+
+          <div class="slice d-flex">
+            <div class="head">
+              <div class="ava img-3"></div>
+            </div>
+
+            <div class="text-content">
+              <h3>title</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Blanditiis, nihil!
+              </p>
+            </div>
+          </div>
+
+          <div class="slice right clip-left gra-left d-flex">
+            <div class="text-content text-left-cus">
+              <h3>title</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Blanditiis, nihil!
+              </p>
+            </div>
+            <div class="head right clip-left">
+              <div class="ava right img-4"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="sec h-100">
+      <div class="gap"></div>
     </div>
   </body>
 </html>
