who am i partlly completed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
 
-    <div class="sec h-100">
+    <div class="sec">
       <div class="gap"></div>
 
       <div class="main-section">
