--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/side-bar.css" />
     <link rel="stylesheet" href="css/my-works.css" />
     <link rel="stylesheet" href="css/whoami.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/media querie/1400p.css" />
     <link rel="stylesheet" href="css/media querie/1200p.css" />
     <link rel="stylesheet" href="css/media querie/1000p.css" />
@@ -72,7 +73,7 @@
       </div>
     </div>
 
-    <div class="side-bar">
+    <div class="side-bar" style="z-index: 10">
       <div class="logo">
         <h1 class="logo-text">Rapid Developer</h1>
         <h1 class="mobi">Rapid Dev</h1>
@@ -82,7 +83,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">My Works</a></li>
-          <li><a href="#">Who Am I</a></li>
+          <li><a href="#">What I Do</a></li>
           <li><a href="#">About Me</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -186,7 +187,7 @@
     <div class="sec who-bg">
       <div class="gap"></div>
       <div class="whoami-sec sec-sec">
-        <h1 class="heading-1 who-text">Who Am I?</h1>
+        <h1 class="heading-1 who-text">What I Do</h1>
 
         <div class="slice-group">
           <div class="slice d-flex">
@@ -194,17 +195,17 @@
               <div class="ava img-1"></div>
             </div>
             <div class="text-content">
-              <h3>title</h3>
+              <h3 class="feat-text">WordPress Developer</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Blanditiis, nihil!
+                I develop custom WordPress themes, plug-ins and customization
+                and also provide SEO optimization and Security
               </p>
             </div>
           </div>
 
           <div class="slice right clip-left gra-left d-flex">
             <div class="text-content text-left-cus">
-              <h3>title</h3>
+              <h3 class="feat-text">Custom Web Developer</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Blanditiis, nihil!
@@ -221,7 +222,7 @@
             </div>
 
             <div class="text-content">
-              <h3>title</h3>
+              <h3 class="feat-text">React & Node.js Developer</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Blanditiis, nihil!
@@ -231,7 +232,7 @@
 
           <div class="slice right clip-left gra-left d-flex">
             <div class="text-content text-left-cus">
-              <h3>title</h3>
+              <h3 class="feat-text">UI & UX Designer</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Blanditiis, nihil!
@@ -245,8 +246,48 @@
       </div>
     </div>
 
-    <div class="sec h-100">
+    <div class="sec h-100" id="particles-js">
       <div class="gap"></div>
+      <div class="con">
+        <div class="profile">
+          <div class="picture"></div>
+          <div class="self-info">
+            <h1>Yasin Khan</h1>
+            <p>UX/UI Designer</p>
+          </div>
+          <div class="button-group">
+            <a href="#">Download CV</a>
+            <a href="#">Hire Me</a>
+          </div>
+          <div class="info"></div>
+        </div>
+        <div class="bio">
+          <h3>Biography</h3>
+          <p>
+            I'm Demetrius Bernard author bestseller books, won the Hugo Award
+            for Best Novel. Writing science fiction, including the New York
+            Times bestseller. I also writes non-fiction, on subjects ranging
+            from personal finance to astronomy to film.
+          </p>
+
+          <div class="loc">
+            <div>
+              <p><span class="hili">AGE: </span>26</p>
+              <p><span class="hili">EMAIL: </span>yasin@rapiddev.my.id</p>
+            </div>
+
+            <div>
+              <p><span class="hili">RESIDENCE: </span>Bangladesh</p>
+              <p><span class="hili">ADDRESS: </span>Dhaka, Bangladesh</p>
+            </div>
+          </div>
+
+          <div class="tech"></div>
+        </div>
+      </div>
     </div>
+
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="assets/eff-bg.js"></script>
   </body>
 </html>
