--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       </div>
     </div>
 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="assets/particles.min.js"></script>
     <script src="assets/eff-bg.js"></script>
   </body>
 </html>
