--- a/index.html
+++ b/index.html
@@ -125,59 +125,59 @@
         <h1 class="heading-1">Take A Look At Some Of My Work</h1>
 
         <div class="card-group pl-4 pr-4 mt-4">
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-1.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
 
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-2.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
 
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-4.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
         </div>
 
         <div class="card-group pl-4 pr-4 mt-4">
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-4.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
 
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-5.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
 
-          <div class="card">
-            <img src="images/img.jpg" alt="" class="card-img" />
+          <div class="card bg-dark">
+            <img src="images/site-6.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="#" class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
         </div>
