--- a/pat/index.html
+++ b/pat/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Perticle</title>
+    <title>Document</title>
   </head>
   <body>
-    <div id="particles-js">
-      <div class="con"></div>
-    </div>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <h1>This is some testing text</h1>
+    <script src="pixi-min.js"></script>
 
-    <script>
-      particlesJS.load("particles-js", "particles.json", function (params) {
-        console.log("loaded");
-      });
-    </script>
+    <script src="render.js"></script>
   </body>
 </html>
