--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/my-works.css" />
     <link rel="stylesheet" href="css/whoami.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/hover.css" />
     <link rel="stylesheet" href="css/media querie/1400p.css" />
     <link rel="stylesheet" href="css/media querie/1200p.css" />
     <link rel="stylesheet" href="css/media querie/1000p.css" />
@@ -81,16 +82,16 @@
 
       <div class="menu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">My Works</a></li>
-          <li><a href="#">What I Do</a></li>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="hvr-underline-from-left">Home</a></li>
+          <li><a href="#" class="hvr-underline-from-left">My Works</a></li>
+          <li><a href="#" class="hvr-underline-from-left">What I Do</a></li>
+          <li><a href="#" class="hvr-underline-from-left">About Me</a></li>
+          <li><a href="#" class="hvr-underline-from-left">Contact</a></li>
         </ul>
       </div>
       <div class="mail">
         <p>Email</p>
-        <p class="e">yasin@rapiddev.my.id</p>
+        <p class="e">yasin@rapiddev.tk</p>
       </div>
     </div>
 
@@ -190,29 +191,34 @@
         <h1 class="heading-1 who-text">What I Do</h1>
 
         <div class="slice-group">
-          <div class="slice d-flex">
-            <div class="head">
-              <div class="ava img-1"></div>
-            </div>
-            <div class="text-content">
-              <h3 class="feat-text">WordPress Developer</h3>
-              <p>
-                I develop custom WordPress themes, plug-ins and customization
-                and also provide SEO optimization and Security
-              </p>
+          <div>
+            <div class="slice d-flex">
+              <div class="head">
+                <div class="ava img-1"></div>
+              </div>
+              <div class="text-content">
+                <h3 class="feat-text">WordPress Developer</h3>
+                <p>
+                  I develop custom WordPress themes, plug-ins and customization
+                  and also provide SEO optimization and Security
+                </p>
+              </div>
             </div>
           </div>
 
-          <div class="slice right clip-left gra-left d-flex">
-            <div class="text-content text-left-cus">
-              <h3 class="feat-text">Custom Web Developer</h3>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Blanditiis, nihil!
-              </p>
-            </div>
-            <div class="head right clip-left">
-              <div class="ava right img-2"></div>
+          <div class="d-flex flex-row-reverse">
+            <div class="slice d-flex flex-row-reverse clip-left">
+              <div class="head clip-left">
+                <div class="ava img-2 ml-auto"></div>
+              </div>
+              <div class="text-content">
+                <h3 class="feat-text">Custom Web Developer</h3>
+                <p>
+                  I develop pixel perfect websites from design mockup with
+                  mobile first apporch that ensures responsiveness across
+                  devices
+                </p>
+              </div>
             </div>
           </div>
 
@@ -230,16 +236,19 @@
             </div>
           </div>
 
-          <div class="slice right clip-left gra-left d-flex">
-            <div class="text-content text-left-cus">
-              <h3 class="feat-text">UI & UX Designer</h3>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Blanditiis, nihil!
-              </p>
-            </div>
-            <div class="head right clip-left">
-              <div class="ava right img-4"></div>
+          <div class="d-flex flex-row-reverse">
+            <div class="slice d-flex flex-row-reverse clip-left">
+              <div class="head clip-left">
+                <div class="ava img-4 ml-auto"></div>
+              </div>
+              <div class="text-content">
+                <h3 class="feat-text">UI & UX Designer</h3>
+                <p>
+                  I create eye catching UI/UX experience full of elegant
+                  animation and effect that awes and holds the attention of the
+                  user
+                </p>
+              </div>
             </div>
           </div>
         </div>
