--- a/pat/index.html
+++ b/pat/index.html
@@ -11,5 +11,18 @@
     <script src="pixi-min.js"></script>
 
     <script src="render.js"></script>
+
+    <div class="slice d-flex">
+      <div class="head">
+        <div class="ava img-1"></div>
+      </div>
+      <div class="text-content">
+        <h3 class="feat-text">WordPress Developer</h3>
+        <p>
+          I develop custom WordPress themes, plug-ins and customization and also
+          provide SEO optimization and Security
+        </p>
+      </div>
+    </div>
   </body>
 </html>
