--- a/index.html
+++ b/index.html
@@ -298,5 +298,10 @@
 
     <script src="assets/particles.min.js"></script>
     <script src="assets/eff-bg.js"></script>
+
+    <script src="assets/pixi-min.js"></script>
+    <script src="assets/render.js"></script>
+
+    <div class="footer"></div>
   </body>
 </html>
