--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
     <script src="assets/particles.min.js"></script>
     <script src="assets/eff-bg.js"></script>
 
+    <div id="can" style="width: 100%; height: 50vh"></div>
     <script src="assets/pixi-min.js"></script>
     <script src="assets/render.js"></script>
 
