--- a/index.html
+++ b/index.html
@@ -299,10 +299,71 @@
     <script src="assets/particles.min.js"></script>
     <script src="assets/eff-bg.js"></script>
 
-    <div id="can" style="width: 100%; height: 50vh"></div>
+    <div id="can" style="width: 100%; height: 80vh">
+      <div class="con-info">
+        <div class="con-c">
+          <h3>Reach out for a new project or just say hello</h3>
+          <input type="text" placeholder="Your Name" />
+          <input type="email" placeholder="Your Email" />
+          <input type="text" placeholder="Subject" />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="5"
+            placeholder="Your Message"
+          ></textarea>
+          <button>Submit</button>
+        </div>
+      </div>
+    </div>
+
     <script src="assets/pixi-min.js"></script>
     <script src="assets/render.js"></script>
 
-    <div class="footer"></div>
+    <div class="footer sec">
+      <div class="gap"></div>
+      <div class="fot-details">
+        <div>
+          <p>Quick Links</p>
+          <ul>
+            <li>
+              <a href="https://www.freelancer.com/u/wildhound404">Freelancer</a>
+            </li>
+            <li><a href="https://www.fiverr.com/yasin40469?">Fiverr</a></li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UC22WNCmnBcL9GR6iqUbeaDw/?guided_help_flow=5"
+                >YouTube</a
+              >
+            </li>
+            <li><a href="https://github.com/Wild-Hound">GitHub</a></li>
+            <li><a href="https://dribbble.com/Wild-Hound">Dirbbble</a></li>
+          </ul>
+        </div>
+
+        <h5 class="right-text">All Rights Reserved Rapid Dev</h5>
+
+        <div>
+          <p>Contacts</p>
+          <ul>
+            <li>
+              <p class="num">Phone: (+88) 01753700882</p>
+            </li>
+            <li>
+              <a href="mailto:yasin@radipdev.tk">Email: yasin@radipdev.tk</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/yasin-khan-ab75801b1/"
+                >Linkdin</a
+              >
+            </li>
+            <li>
+              <a href="https://www.facebook.com/alexia.benz.16/">Facebook</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
