--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
 
           <div class="card bg-dark">
-            <img src="images/site-4.PNG" alt="" class="card-img" />
+            <img src="images/site-3.PNG" alt="" class="card-img" />
             <div class="card-body">
               <h4 class="card-title">Title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -299,7 +299,7 @@
     <script src="assets/particles.min.js"></script>
     <script src="assets/eff-bg.js"></script>
 
-    <div id="can" style="width: 100%; height: 80vh">
+    <div id="can" style="width: 100%">
       <div class="con-info">
         <div class="con-c">
           <h3>Reach out for a new project or just say hello</h3>
@@ -310,7 +310,7 @@
             name=""
             id=""
             cols="30"
-            rows="5"
+            rows="3"
             placeholder="Your Message"
           ></textarea>
           <button>Submit</button>
@@ -325,7 +325,7 @@
       <div class="gap"></div>
       <div class="fot-details">
         <div>
-          <p>Quick Links</p>
+          <p class="big">Quick Links</p>
           <ul>
             <li>
               <a href="https://www.freelancer.com/u/wildhound404">Freelancer</a>
@@ -342,10 +342,8 @@
           </ul>
         </div>
 
-        <h5 class="right-text">All Rights Reserved Rapid Dev</h5>
-
         <div>
-          <p>Contacts</p>
+          <p class="big">Contacts</p>
           <ul>
             <li>
               <p class="num">Phone: (+88) 01753700882</p>
