a little bit more

--- a/index.html
+++ b/index.html
@@ -265,30 +265,47 @@
             <p>UX/UI Designer</p>
           </div>
           <div class="button-group">
-            <a href="#">Download CV</a>
-            <a href="#">Hire Me</a>
+            <a href="#" class="hvr-rectangle-in">Download CV</a>
+            <a href="#" class="hvr-rectangle-in">Hire Me</a>
           </div>
           <div class="info"></div>
         </div>
         <div class="bio">
-          <h3>Biography</h3>
-          <p>
-            I'm Demetrius Bernard author bestseller books, won the Hugo Award
-            for Best Novel. Writing science fiction, including the New York
-            Times bestseller. I also writes non-fiction, on subjects ranging
-            from personal finance to astronomy to film.
-          </p>
-
-          <div class="loc">
+          <div class="d-flex flex-column justify-content-between">
             <div>
-              <p><span class="hili">AGE: </span>26</p>
-              <p><span class="hili">EMAIL: </span>yasin@rapiddev.my.id</p>
+              <h3>Biography</h3>
+              <p>
+                I'm Yasin a full stack web developer. I’m a designer who codes,
+                I’ve worked in-house, and remotely on projects for brands and
+                startups.I can be as involved in your project as you need me to
+                be from the seed of the idea, to sketches, creative direction,
+                design, copywriting, system design, and even the front-end and
+                WordPress build.
+              </p>
             </div>
 
             <div>
-              <p><span class="hili">RESIDENCE: </span>Bangladesh</p>
-              <p><span class="hili">ADDRESS: </span>Dhaka, Bangladesh</p>
+              <h3>EXPERIENCE</h3>
+              <p>
+                I am a freelance web designer and front-end developer for
+                clients around the world. I lead a small team of fresh web
+                developers
+              </p>
             </div>
+
+            <div class="loc">
+              <div>
+                <p><span class="hili">AGE: </span>26</p>
+                <p><span class="hili">EMAIL: </span>yasin@rapiddev.tk</p>
+              </div>
+
+              <div>
+                <p><span class="hili">RESIDENCE: </span>Bangladesh</p>
+                <p><span class="hili">ADDRESS: </span>Dhaka, Bangladesh</p>
+              </div>
+            </div>
+
+            <p style="color: #17a2b8">LET'S WORK TOGETHER</p>
           </div>
 
           <div class="tech"></div>
