--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               >My Github</a
             >
             <br />
-            <a href="web_dev_CV-1.pdf" class="btn btn-link cv">Get My CV</a>
+            <a href="" class="btn btn-link cv">Get My CV</a>
           </div>
         </div>
 
@@ -399,7 +399,7 @@
           <p class="big">Contacts</p>
           <ul>
             <li>
-              <p class="num">Phone: (+88) 01753700882</p>
+              <p class="num"></p>
             </li>
             <li>
               <a href="mailto:yasin@radipdev.tk">Email: yasin@radipdev.tk</a>
